For 1.20.5
	- GeoSpatial nodes: GeoViewpoint, GeoLocation, GeoElevationGrid, GeoCoordinate,
	  GeoOrigin, GeoPositionInterpolator, GeoLOD nodes should be pretty stable.

	- Classic VRML parser had difficulties with field replacements on PROTO invocations,
	  if PROTO invocations were nested. 

	- Threading and Javascript. Now, all initialization happens in same thread as 
	  FreeWRL event loops; it has been determined that there were problems with the Javascript
	  interpreters garbage collection as it is not Javascript context-based, thus was
	  not thread-safe for the scripting methods previously used in FreeWRL.

	- fixed problem with collision and ccw/solid polygons whereby one would collide with
	  the transparent surface, not the visible surface.

For 1.20.4
	- problem parsing floats/doubles with a positive sign starting(or part of exponent),
	  eg, "123e+10" now parses - before expected "123e10".

	- start on Geospatial nodes. GeoLocation, GeoViewpoint and GeoOrigin coded. Note -
	  eventOuts not in code yet, until there are more Geo nodes to test routing with.

	- SFVec3d and MFVec3d code handling added to classic and xml parser.

	- Sensitive nodes can now be partially occluded by other (non-sensitive) geometry.

	- Linux: if iconified, skip all OpenGL rendering calls.

	- modified file-read function to handle files without an end of line character on last 
	  line - some older Microsoft-generated files would cause last line to be lost. 

	- change order of actual DEF node pointer saving so that, within a DEFine, the name can
	  be used. (eg, DEF xx Transform{children Script{field yy USE xx}}

	- Javascript - accessing an MFRotation from a specified SFNode gave an error - now fixed.

	- LOD changed to accept either VRML "level" or X3D "children" fields.

	- Texture files that are located, but are invalid textures, are now reported in a more user-friendly
	  way.

For 1.20.3