@@ -25,7 +25,6 @@ BOOL cParse(void* ptr, unsigned ofs, const char* data)
  struct VRMLParser* parser;
  struct X3D_Node* node;
 
-
  if (!globalParser) {
 	/* printf ("cParse, new parser\n"); */
  	parser=newParser(ptr, ofs);
